[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.report]
omit = [
	"*/env/*",
	"*/venv/*",
	"*/.venv/*",
	"*/tests/*",
	"*/examples/*",
	"*/__init__.py"
]

[tool.poetry]
name = "py-bdd-context"
version = "0.0.0"
description = "Biblioteca com Context Manager para testes Behavior-driven development (BDD)."
authors = ["Imobanco"]
readme = "README.rst"
packages = [{include = "py_bdd_context/**/*.py"}]
homepage = "https://github.com/imobanco/py-bdd-context"
repository = "https://github.com/imobanco/py-bdd-context"
license = "GPLv3"

keywords = ["BDD", "Context Manager"]
classifiers = [
    "Programming Language :: Python :: 3",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Environment :: Web Environment",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: Portuguese (Brazilian)",
	"Operating System :: OS Independent",
	"Topic :: Documentation :: Sphinx",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
	"Topic :: Utilities"
]
include = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.2"

[tool.poetry.scripts]

# poetry config --list
[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = "."
